[package]
name = "intermezzos"
version = "0.1.0"
authors = ["steveklabnik <steve@steveklabnik.com>"]

[package.metadata.bootimage]
default-target = "intermezzos.json"
run-command = [
        "qemu-system-x86_64", 
        "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
        "-serial", "stdio",
        #"-nographic",
        "-drive", "format=raw,file={}"
    ]

[workspace]
exclude = ["wasm-sample-app"]

# external
[dependencies]
bootloader = "0.5.1"
x86 = "0.8.1"
lde = "0.3"

[dependencies.spin]
version = "0.4.10"
default-features = false

[dependencies.lazy_static]
version = "1.2.0"
default-features = false
features = ["spin_no_std"]

[dependencies.wasmi]
version = "=0.4.4"
default-features = false
features = ["core"]

[patch.crates-io]
wasmi = { git = 'https://github.com/johnterickson/wasmi.git' }
# wasmi = { path = '../wasmi' }


# internal

[dependencies.common]
path = "common"

[dependencies.keyboard]
path = "keyboard"

[dependencies.interrupts]
path = "interrupts"

[dependencies.pic]
path = "pic"

[dependencies.serial]
path = "serial"

[dependencies.vga]
path = "vga"

[[bin]]
name = "intermezzos"
test = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
